--- a/coolio.html
+++ b/coolio.html
@@ -22,6 +22,8 @@
     </script>
 </head>
 <body>
+
+    <h1></h1>
  
     <!-- button to Download App for new app users 
     <form action="http://hastrk.com/serve?action=click&publisher_id=1&site_id=2" target="_blank">
@@ -34,4 +36,7 @@
     </form>-->
  
 </body>
+<script>
+    document.querySelector('h1').innerHTML = 'coolio://activate-customer' + window.location.search;
+</script>
 </html>
