--- a/smartcooler_new_user.html
+++ b/smartcooler_new_user.html
@@ -15,7 +15,7 @@
     <script>
     window.onload = function() {
     <!-- Deep link URL for existing users with app already installed on their device -->
-        window.location = 'smartcooler://activate-customer' + window.location.search;
+        window.location = 'vfthcontrol://activate-customer' + window.location.search;
     <!-- Download URL (TUNE link) for new users to download the app -->
         // setTimeout("window.location = 'http://hastrk.com/serve?action=click&publisher_id=1&site_id=2';", 1000);
     }
