--- a/smartcooler_reset_pwd.html
+++ b/smartcooler_reset_pwd.html
@@ -15,7 +15,7 @@
     <script>
         window.onload = function() {
             <!-- Deep link URL for existing users with app already installed on their device -->
-            window.location = 'smartcooler://reset-pass' + window.location.search;
+            window.location = 'vfthcontrol://reset-pass' + window.location.search;
             <!-- Download URL (TUNE link) for new users to download the app -->
             // setTimeout("window.location = 'http://hastrk.com/serve?action=click&publisher_id=1&site_id=2';", 1000);
         }
