--- a/vfthcontrol_reset_pwd.html
+++ b/vfthcontrol_reset_pwd.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0, maximum-scale=1.0" />
-    <title>Smart Cooler Reset Password</title>
+    <title>Vodafone T&H Control Reset Password</title>
     <style>@media screen and (max-device-width:480px){body{-webkit-text-size-adjust:none}}</style>
 
     <!-- implement javascript on web page that first first tries to open the deep link
